--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -71,7 +71,7 @@
         }
 
         .btn-approved {
-            background-color: #007bff; /* 파란색 */
+            background-color: #ff007f; /* 파란색 */
             color: white;
         }
 
@@ -118,7 +118,8 @@
 
     async function fetchRequests() {
         try {
-            const response = await fetch(`http://localhost:8080/api/profiles?page=${currentPage}&size=${pageSize}`);
+            const token = getAccessToken();
+            const response = await sendRequestWithToken(`http://localhost:8080/api/profiles?page=${currentPage}&size=${pageSize}`, 'GET', null, null);
             const data = await response.json();
 
             const requestList = document.getElementById('requestList');
@@ -155,30 +156,30 @@
     function createRequestCard(item, isPending) {
         const requestCard = document.createElement('div');
         requestCard.className = 'request-card';
-        requestCard.innerHTML =
-            `<span>사용자: ${item.user}</span>
-            <span>프로필: ${item.profile}</span>
-            <span>상태: ${item.requestStatus}</span>
-            <div>
-                ${isPending ?
-                `<button class="btn btn-custom btn-approved" onclick="updateRequest(${item.id}, 'APPROVED')">승인</button>
-                     <button class="btn btn-custom btn-rejected" onclick="updateRequest(${item.id}, 'REJECTED')">거부</button>`
-                :
-                `<button class="btn btn-primary disabled" disabled>처리 완료</button>`
-            }
-            </div>`;
+        requestCard.innerHTML = `
+        <span>사용자: ${item.user}</span>
+        <span>프로필: ${item.profile}</span>
+        <span>상태: ${item.requestStatus}</span>
+        <div>
+            ${isPending ?
+            `<button class="btn btn-custom btn-approved" onclick="updateRequest(${item.id}, 'APPROVED')">승인</button>
+                 <button class="btn btn-custom btn-rejected" onclick="updateRequest(${item.id}, 'REJECTED')">거부</button>`
+            :
+            `<button class="btn ${item.requestStatus === 'REJECTED' ? 'btn-custom' : 'btn-primary'} disabled"
+                        style="background-color: ${item.requestStatus === 'REJECTED' ? '#808080' : '#007bff'};" disabled>
+                    처리 완료
+                </button>`
+        }
+        </div>`;
         return requestCard;
     }
 
+
     async function updateRequest(requestId, status) {
         try {
-            const response = await fetch(`http://localhost:8080/api/profiles/${requestId}`, {
-                method: 'PUT',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ requestStatus: status }),
-            });
+            const response = await sendRequestWithToken(`http://localhost:8080/api/profiles/${requestId}`, 'PUT', {
+                'Content-Type': 'application/json',
+            }, JSON.stringify({ requestStatus: status }))
 
             if (response.ok) {
                 alert(`요청이 ${status}로 업데이트되었습니다.`);
