프로필 요청 ui 개선 및 프로필 버튼 생성

--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -138,7 +138,7 @@
 
 <script>
     let isUsernameAvailable = false; // 사용자명 사용 가능 여부
-    let isPasswordAvailable = false; // 사용자명 사용 가능 여부
+    let isPasswordAvailable = false; // 비밀번호 일치 여부
 
     window.onload = function() {
         document.querySelector("#btnCheckUsername").onclick = checkUsername;
