--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -178,26 +178,21 @@
   });
 
   function fetchPostDetail(postId) {
-    const token = localStorage.getItem("accessToken");
-        if (!token) {
-            console.error("토큰이 없습니다.");
-            return;
-        }
 
-    fetch(`/api/posts/${postId}`, {
-                    method: 'GET',
-                    headers: {
-                        'Authorization': 'Bearer ' + token,
-                        'Content-Type': 'application/json'
-                    }
-            })
-            .then(response => response.json())
-            .then(data => {
-              renderPostDetail(data);
+    const url = `/api/posts/${postId}`;
+    const method = 'GET';
+    const headers = new Headers({
+        'Content-Type': 'application/json'
+    });
 
-              updateThumbsUp(data.response.thumbsUp);
-              checkOwnership(data.response.userId); // 사용자 확인 함수 호출
-            });
+    sendRequestWithToken(url, method, headers, null)
+        .then(response => response.json())
+        .then(data => {
+           renderPostDetail(data);
+
+           updateThumbsUp(data.response.thumbsUp);
+           checkOwnership(data.response.userId); // 사용자 확인 함수 호출
+        });
   }
 
   function renderPostDetail(post) {
@@ -255,23 +250,17 @@
   }
 
   function addThumbsUp(postId) {
-    const token = localStorage.getItem("accessToken");
-        if (!token) {
-            console.error("토큰이 없습니다.");
-            return;
-        }
+    const url = `/api/posts/${postId}/thumbsUp`;
+    const method = 'GET';
+    const headers = new Headers({
+        'Content-Type': 'application/json'
+    });
 
-    fetch(`/api/posts/${postId}/thumbsUp`, {
-            method: 'GET',
-            headers: {
-                        'Authorization': 'Bearer ' + token,
-                        'Content-Type': 'application/json'
-            }
-         })
-            .then(response => response.json())
-            .then(data => {
-              updateThumbsUp(data.response);
-            });
+    sendRequestWithToken(url, method, headers, null)
+        .then(response => response.json())
+        .then(data => {
+           updateThumbsUp(data.response);
+        });
   }
 
   function updatePost(postId) {
@@ -280,50 +269,40 @@
     const hobbyCategory = document.getElementById('editHobby').value;
     const videoLink = document.getElementById('editVideoLink').value;
 
-    const token = localStorage.getItem("accessToken");
-        if (!token) {
-            console.error("토큰이 없습니다.");
-            return;
-        }
-
-    fetch(`/api/posts/${postId}`, {
-      method: 'POST',
-      headers: {
-        'Authorization': 'Bearer ' + token,
+    const url = `/api/posts/${postId}`;
+    const method = 'POST';
+    const headers = new Headers({
         'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({ title, description, hobbyCategory, videoLink })
-    })
-            .then(response => response.json())
-            .then(data => {
-              alert('글이 수정되었습니다.');
-              window.location.reload();
-            });
+    });
+    const body = JSON.stringify({ title, description, hobbyCategory, videoLink });
+
+    sendRequestWithToken(url, method, headers, body)
+      .then(response => response.json())
+      .then(data => {
+         alert('글이 수정되었습니다.');
+         window.location.reload();
+      });
   }
 
   function deletePost(postId) {
 
-    const token = localStorage.getItem("accessToken");
-        if (!token) {
-            console.error("토큰이 없습니다.");
-            return;
-        }
-
     if (confirm('정말로 이 게시물을 삭제하시겠습니까?')) {
-      fetch(`/api/posts/${postId}`, { method: 'DELETE',
-            headers: {
-              'Authorization': 'Bearer ' + token,
-              'Content-Type': 'application/json'
-            }
-       })
-              .then(response => {
+
+      const url = `/api/posts/${postId}`;
+      const method = 'DELETE';
+      const headers = new Headers({
+        'Content-Type': 'application/json'
+      });
+
+      sendRequestWithToken(url, method, headers, null)
+        .then(response => {
                 if (response.ok) {
                   alert('게시물이 삭제되었습니다.');
                   window.location.href = '/board.html'; // 또는 다른 페이지로 리디렉션
                 } else {
                   alert('게시물 삭제에 실패했습니다.');
                 }
-              });
+       });
     }
   }
 </script>
