--- a/src/main/resources/static/familiarity.html
+++ b/src/main/resources/static/familiarity.html
@@ -94,6 +94,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+<script type="module" src="/js/auth.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const urlParams = new URLSearchParams(window.location.search);
@@ -104,25 +105,19 @@
     });
 
     function calculateFamiliarity(userId) {
-        const token = localStorage.getItem("accessToken");
-        if (!token) {
-            console.error("토큰이 없습니다.");
-            return;
-        }
-
         document.getElementById('nameScore').innerText = '계산 중...';
         document.getElementById('mbtiScore').innerText = '계산 중...';
         document.getElementById('hobbyScore').innerText = '계산 중...';
         document.getElementById('finalScore').innerText = '계산 중...';
 
         setTimeout(() => {
-            fetch(`/api/familiarity/${userId}`, {
-                    method: 'GET',
-                    headers: {
-                        'Authorization': 'Bearer ' + token,
-                        'Content-Type': 'application/json'
-                    }
-                })
+            const url = `/api/familiarity/${userId}`;
+            const method = 'GET';
+            const headers = new Headers({
+                'Content-Type': 'application/json'
+            });
+
+            sendRequestWithToken(url, method, headers, null)
                 .then(response => response.json())
                 .then(data => {
                     if (data.response) {
