클라이언트의 엑세스 토큰의 역할을 확인하여 '프로필 요청'을 숨기는 기능

--- a/src/main/resources/static/navbar.html
+++ b/src/main/resources/static/navbar.html
@@ -22,9 +22,8 @@
             <li>
                 <a href="/board.html"><i class="bi bi-chat-dots"></i> 취미 공유</a>
             </li>
-            <li>
-                <a href="/profile.html"> <i class="bi bi-person"></i> 프로필 요청
-                </a>
+            <li id="profileRequestItem" style="display: none;">
+                <a href="/profile.html"><i class="bi bi-person"></i> 프로필 요청</a>
             </li>
         </ul>
 
